# Spherix

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
crates/config/: Cargo.toml
crates/config/src/: lib.rs  macro.rs
crates/log/: Cargo.toml
crates/log/src/: lib.rs
crates/macro/: Cargo.toml
crates/macro/src/: lib.rs
crates/math/: Cargo.toml
crates/math/src/vector/: vec2.rs
crates/net/: .gitignore  Cargo.toml
crates/net/src/: join.rs  lib.rs  preamble.rs
crates/net/src/chat/: message.rs  signature_cache.rs  signature_validator.rs
crates/proto/: Cargo.toml  README.md
crates/proto/src/: lib.rs
crates/proto/src/io/: error.rs  misc.rs  var.rs
crates/proto/src/packet/clientbound/: chat.rs  mod.rs
crates/registry/: Cargo.toml
crates/registry/src/: damage.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/server/src/console/: mod.rs  msg.rs
crates/server/src/entities/: mod.rs
crates/server/src/perf/: worker.rs
crates/server/src/systems/: mod.rs  packet.rs
crates/server/src/world/: world.rs
crates/server/src/world/player/: worker.rs
crates/util/: Cargo.toml
crates/util/src/: f32_triplet.rs  lib.rs  sha1.rs
crates/world/: Cargo.toml
crates/world/src/: lib.rs  state.rs
crates/world/src/block/: block.rs  packed.rs  properties.rs
crates/world/src/chunk/: column.rs  handle.rs  mod.rs  pos.rs  section.rs  status.rs
crates/world/src/chunk/palette/: container.rs  global.rs  local.rs
crates/world/src/chunk/vector/: mod.rs
crates/world/src/dimension/: mod.rs
crates/world/src/region/: mod.rs  pos.rs
crates/worldgen/: Cargo.toml  Generator.md  README.md
crates/worldgen/benches/: pprof.rs
crates/worldgen/src/: aquifer.rs  material.rs  rng.rs
crates/worldgen/src/biome/: gradient.rs  temperature.rs
crates/worldgen/src/biome/climate/: decimal.rs  mod.rs  point.rs
crates/worldgen/src/biome/climate/rtree/: aabb.rs  mod.rs
crates/worldgen/src/chunk/: column.rs  mod.rs
crates/worldgen/src/noise/: math.rs  mod.rs  settings.rs
crates/worldgen/src/noise/blending/: blender.rs  data.rs
crates/worldgen/src/noise/density/: debug.rs  maker.rs  misc.rs  spline.rs
crates/worldgen/src/noise/json/deserializer/: blend.rs  cache.rs  maker.rs  misc.rs  mod.rs
crates/worldgen/src/noise/json/resolvable/: misc.rs  mod.rs
crates/worldgen/src/noise/perlin/: double.rs  noise.rs
crates/worldgen/src/noise/perlin/grid/: legacy.rs  noise.rs  octave.rs
crates/worldgen/src/surface/: bands.rs  condition.rs  condition_factory.rs  context.rs  level.rs  mod.rs  rule_factory.rs
crates/worldgen/src/surface/json/: mod.rs
crates/worldgen/src/surface/json/deserializer/: condition.rs  rule.rs
crates/worldgen/src/surface/json/resolvable/: mod.rs
src/config/: Cargo.toml
src/log/: Cargo.toml
src/macro/: Cargo.toml
src/macro/src/: config.rs
src/math/: Cargo.toml
src/math/src/vector/: iterator.rs  mod.rs  vec3.rs
src/net/: Cargo.toml
src/net/src/: auth.rs  client.rs  conn.rs  io.rs  mojang.rs  server.rs  worker.rs
src/net/src/chat/: mod.rs
src/proto/: Cargo.toml
src/proto/src/: codec.rs
src/proto/src/io/: array.rs  bitset.rs  io.rs  mod.rs  pos.rs  primitives.rs
src/proto/src/packet/: mod.rs
src/proto/src/packet/clientbound/: player_info_update.rs
src/proto/src/packet/serverbound/: mod.rs
src/registry/: Cargo.toml
src/server/: Cargo.toml
src/server/src/: player.rs  plugin.rs  server.rs  ticker.rs
src/server/src/console/: cmd.rs
src/server/src/entities/living/: health.rs  mod.rs
src/server/src/entities/living/player/: food.rs  mod.rs  xp.rs
src/server/src/game/: game.rs
src/server/src/perf/: mod.rs
src/server/src/systems/: command.rs  interaction.rs  join.rs  keep_alive.rs  message.rs  movement.rs  player.rs
src/server/src/world/: mod.rs
src/server/src/world/dimension/: layout.rs  mod.rs
src/server/src/world/player/: mod.rs  properties.rs
src/server/src/world/region/: generator.rs  mod.rs  worker.rs
src/util/: Cargo.toml
src/util/src/: array.rs  hex.rs  math.rs  nbt.rs  slice.rs  time.rs
src/world/: Cargo.toml
src/world/src/: io.rs  pos.rs
src/world/src/block/: mod.rs  state.rs  variant.rs
src/world/src/block/material/: color.rs  mod.rs
src/world/src/chunk/: heightmap.rs
src/world/src/chunk/biome/: climate.rs  mod.rs
src/world/src/chunk/palette/: mod.rs  resize.rs
src/world/src/chunk/vector/: block.rs
src/world/src/region/: anvil.rs
src/worldgen/: Cargo.toml
src/worldgen/benches/: generator_fill_noise.rs  perlin_noise.rs  shared.rs
src/worldgen/src/: lib.rs
src/worldgen/src/biome/: accessor.rs  mod.rs  noise.rs  sampler.rs
src/worldgen/src/biome/climate/: json.rs  sampler.rs
src/worldgen/src/biome/climate/rtree/: point.rs  primitives.rs
src/worldgen/src/chunk/: generator.rs  noise.rs
src/worldgen/src/noise/: router.rs
src/worldgen/src/noise/blending/: level.rs  mod.rs
src/worldgen/src/noise/density/: binary.rs  blend.rs  cache.rs  density.rs  mod.rs  noise.rs  unary.rs
src/worldgen/src/noise/json/: mod.rs  resolver.rs  value_resolver.rs
src/worldgen/src/noise/json/deserializer/: binary.rs  noise.rs  spline.rs  unary.rs
src/worldgen/src/noise/json/resolvable/: noise.rs  std.rs
src/worldgen/src/noise/perlin/: inner.rs  mod.rs  octave.rs
src/worldgen/src/noise/perlin/grid/: mod.rs
src/worldgen/src/noise/perlin/simplex/: mod.rs  noise.rs  octave.rs
src/worldgen/src/surface/: materializer.rs  rule.rs
src/worldgen/src/surface/json/deserializer/: mod.rs
world/playerdata/: example2.nbt
