[workspace]

members = [
    "crates/proto",
    "crates/net",
    "crates/server",
    "crates/config",
    "crates/log",
    "crates/util",
    "crates/macro",
    "crates/math",
    "crates/registry",
    "crates/world",
    "crates/worldgen",
]

[workspace.dependencies]

# Async, multithreading
tokio = {version = "1.36.0", features = ["full", "tracing"]}
tokio-util = "0.7.10"
tracing = "0.1.40"
tracing-core = "0.1.32"
console-subscriber = "0.2.0"
futures-lite = "1.13.0"
flume = "0.10.14"
rayon = "1.7.0"

# Logging
log = "0.4.17"
tracing-subscriber = { version = "0.3.18", features = ["time"]}
tracing-appender = "0.2.2"

# Serialization
serde = "1.0.160"
serde_json = "1.0.112"
serde_yaml = "0.9.30"

# Macro tools
syn = "2.0.15"
quote = "1.0.26"
proc-macro2 = "1.0.67"
venial = "0.5.0"
paste = "1.0.14"

# Math
bimap = "0.6.3"
rstar = "0.12.0"
nalgebra = "0.32.2"
num-traits = "0.2.19"

# Minecraft-specific, domain-logic
hematite-nbt = "0.5.2"
bevy_app = "0.13.2"
bevy_tasks = "0.13.2"
bevy_ecs = { version = "0.13.2", features = ["multi-threaded"] }

# Encryption
# Versions 0.8+ of the two following crates break cipher streaming
# So we have to use "outdated" 0.7 branch
aes = "0.7.5"
cfb8 = "0.7.1"
rsa = "0.8.2"
rsa-der = "0.3.0"
flate2 = "1.0.25"
sha1 = "0.10.6" # TODO: Replace with crypto-hashes
crypto-hashes = "0.10.0"
md5 = "0.7.0"

# Terminal
rustyline = "11.0.0"
clap = "4.2.5"
shellwords = "1.1.0"
strip-ansi-escapes = "0.1.1"

# Misc
owo-colors = "3.5.0"
time = { version = "0.3.20", features = ["local-offset"] }
anyhow = "1.0.71"
thiserror = "1.0.58"
regex = "1.8.1"
uuid = "1.3.1"
rand = "0.8.5"
reqwest = "0.11.16"
config = "0.13.4"
dyn-clone = "1.0.16"
debug_tree = "0.4.0"
gxhash = "3.4.1"
lazy_static = "1.5.0"
thread_local = "1.1.8"
lru = "0.12.5"

# dev
criterion = "0.5.1"
pprof = { version = "0.3.0", features = ["flamegraph", "protobuf"] }

# Optimize binary size and performance for release builds
[profile.release]
debug = 1
#strip = true

[profile.release-lto]
inherits = "release"
lto = true
