[package]
name = "spherix-config"
version = "0.1.0"
edition = "2021"
authors = ["Bogdan Chertkov <d3lph1.contact@gmail.com>"]

[lib]

[dependencies]
spherix-macro = {path = "../macro"}

config = {workspace = true}
serde = {workspace = true}
serde_yaml = {workspace = true}
bevy_ecs = {workspace = true}
