[package]
name = "spherix-macro"
version = "0.1.0"
edition = "2021"
authors = ["Bogdan Chertkov <d3lph1.contact@gmail.com>"]

[lib]
proc-macro = true

[dependencies]
syn = {workspace = true}
quote = {workspace = true}
proc-macro2 = {workspace = true}
venial = {workspace = true}

regex = {workspace = true}
