[package]
name = "spherix-log"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
spherix-config = {path = "../config"}

tracing = {workspace = true}
tracing-subscriber = {workspace = true}
tracing-appender = {workspace = true}
tracing-core = {workspace = true}
console-subscriber = {workspace = true}
strip-ansi-escapes = {workspace = true}
time = {workspace = true}
owo-colors = {workspace = true}
nu-ansi-term = "0.50.0"
