[package]
name = "spherix-util"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
tracing-appender = {workspace = true}
strip-ansi-escapes = {workspace = true}

sha1 = {workspace = true}

owo-colors = {workspace = true}

serde = {workspace = true}
serde_json = {workspace = true}
hematite-nbt = {workspace = true}

dyn-clone = {workspace = true}
anyhow = {workspace = true}
paste = {workspace = true}
